# sentinel

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Procfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements-render.txt  requirements.txt  sentinel_full_website_experience.html  sentinel_project_card.html  sentinel_review.html  sentinel_v3_architecture.html  sentinel_v3_complete_architecture.html  setup.py  test_v2_agents.py
.agent/skills/add-new-agent/: SKILL.md
.agent/skills/deploy-docker/: SKILL.md
.agent/skills/run-benchmark/: SKILL.md
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
dashboard/: index.html  package-lock.json  package.json  vite.config.js
dashboard/src/: App.css  App.jsx  firebase.js  index.css
dashboard/src/components/: AgentBreakdown.jsx  ConfigPanel.jsx  LatencyHistogram.jsx  LiveFeed.jsx  SentinelLogo.jsx  ThreatHeatmap.jsx
dashboard/src/pages/: AppDashboard.css  AppDashboard.jsx  Docs.css  Docs.jsx  Landing.css  Landing.jsx  Pricing.css  Pricing.jsx  SignIn.css  SignIn.jsx
data/: adversarial_eval_set.jsonl
scripts/: generate_eval_set.py  setup.sh  supabase_migration.sql
sentinel/: __init__.py  config.py  models.py
sentinel/agents/: __init__.py  adversarial_rephrasing.py  agentic_loop_breaker.py  base.py  brand_guard.py  compliance_tagger.py  context_anchor.py  cost_anomaly_detector.py  hallucination_probe.py  injection_scout.py  intent_classifier.py  jailbreak_guard.py  jailbreak_pattern_detector.py  locale_compliance_router.py  multilingual_guard.py  pii_sentinel.py  prompt_lineage.py  response_safety.py  token_anomaly.py  tool_call_safety.py  toxicity_screener.py  v5_infra.py
sentinel/audit/: __init__.py  kafka_layer.py  logger.py  models.py
sentinel/consensus/: __init__.py  bayesian_engine.py  circuit_breaker.py  risk_aggregator.py
sentinel/eval/: __init__.py  mutation_engine.py  normalizer.py
sentinel/gateway/: __init__.py  auth.py  feedback.py  main.py  policy.py  rate_limiter.py  webhooks.py
sentinel/ml/: __init__.py  risk_scorer.py
sentinel/sdk/: __init__.py  client.py  langchain_handler.py  llamaindex_node.py
sentinel/storage/: __init__.py  faiss_manager.py  redis_client.py  semantic_cache.py  supabase_adapter.py
sentinel/tools/: red_team_runner.py
sentinel_ai_sdk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
sentinel_guardrails_sdk.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_all_agents.py
tests/red_team/: adversarial_recall_benchmark.py  run_benchmark.py
vscode-extension/: CHANGELOG.md  README.md  package-lock.json  package.json
vscode-extension/src/: client.ts  extension.ts
vscode-extension/src/views/: agentTree.ts  dashboardPanel.ts  scanResultsTree.ts  statusTree.ts
